tests/ui/lang/core/ptr/allocate_const_scalar.stderr
warning: the feature `ptr_internals` is internal to the compiler or standard library
 --> $DIR/allocate_const_scalar.rs:6:12
  |
6 | #![feature(ptr_internals)]
  |            ^^^^^^^^^^^^^
  |
  = note: using it is strongly discouraged
  = note: `#[warn(internal_features)]` on by default

error: pointer has non-null integer address
   |
note: used from within `allocate_const_scalar::main`
  --> $DIR/allocate_const_scalar.rs:16:5
   |
16 |     *output = POINTER;
   |     ^^^^^^^^^^^^^^^^^
note: called by `main`
  --> $DIR/allocate_const_scalar.rs:15:8
   |
15 | pub fn main(output: &mut Unique<[u8; 4]>) {
   |        ^^^^

error: aborting due to 1 previous error; 1 warning emitted

